--- a/cinemas/index.html
+++ b/cinemas/index.html
@@ -15,36 +15,53 @@
                 <div class="col m-2">
                     <div class="card" style="height: auto;">
                         <div class="card-body">
+                            <i class="bi bi-trash3-fill text-danger delete-cinema" id="deleteCinema1"></i>
                             <h5 class="card-title">🎥</h5>
-                            <p class="card-text" id="cinema1Name"></p>
+                            <p class="card-text mb-0" id="cinema1Name"></p>
+                            <p style="font-size: 1rem;" class="card-title" id="cinema1InviteCount"></p>
                             <a class="btn btn-themed" id="cinema1Button"><strong>Enter the Cinema</strong></a>
+                            <a class="mt-3" id="cinema1Edit" href="#" style="text-decoration: none;"><p style="font-size: 1rem;" class="card-text mt-2"><i class="bi bi-pencil-square" style="font-size: 1rem;"></i> Edit cinema</p></a>
+
                         </div>
                     </div>
                 </div>
                 <div class="col m-2">
                     <div class="card" style="height: auto;">
                         <div class="card-body">
+                            <i class="bi bi-trash3-fill text-danger delete-cinema" id="deleteCinema2"></i>
                             <h5 class="card-title">🎥</h5>
-                            <p class="card-text" id="cinema2Name"></p>
+                            <p class="card-text mb-0" id="cinema2Name"></p>
+                            <p style="font-size: 1rem;" class="card-title" id="cinema2InviteCount"></p>
                             <a class="btn btn-themed" id="cinema2Button">Enter the Cinema</a>
+                            <a id="cinema2Edit" href="#" style="text-decoration: none;"><p style="font-size: 1rem;" class="card-text mt-2"><i class="bi bi-pencil-square" style="font-size: 1rem;"></i> Edit cinema</p></a>
                         </div>
                     </div>
                 </div>
                 <div class="col m-2">
                     <div class="card" style="height: auto;">
                         <div class="card-body">
+                            <i class="bi bi-trash3-fill text-danger delete-cinema" id="deleteCinema3"></i>
                             <h5 class="card-title">🎥</h5>
-                            <p class="card-text" id="cinema3Name"></p>
+                            <p class="card-text mb-0" id="cinema3Name"></p>
+                            <p style="font-size: 1rem;" class="card-title" id="cinema3InviteCount"></p>
                             <a class="btn btn-themed" id="cinema3Button">Enter the Cinema</a>
+                            <a id="cinema3Edit" href="#" style="text-decoration: none;"><p style="font-size: 1rem;" class="card-text mt-2"><i class="bi bi-pencil-square" style="font-size: 1rem;"></i> Edit cinema</p></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <p class="text-center"><a href="?popup=createCinema"><button class="btn btn-themed">Create cinema.</button></a></p>
     </div>
-    <script type="module">
+    <script type="module" id="sd-getCinemas">
         import { getAccountCinemas } from "/scripts/sw-main.js"
         getAccountCinemas()
+        document.getElementById("sd-getCinemas").remove()
+    </script>
+    <script type="module" id="sd-page-load">
+        import { pageLoad } from "/scripts/sw-main.js";
+        pageLoad()
+        document.getElementById("sd-page-load").remove()
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
